# metatrader-mcp

./: README.md  pyproject.toml
src/metatradermcp/: .gitignore  __init__.py  __main__.py
